Got a basic app working

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
-<html>
-    <head>
-    <title>Test-Angular State Machine</title>
+<html ng-app="myApp">
+<head>
+<title>Test-Angular State Machine</title>
 
-    </head>
-    <body>
-    TEST
-    <script src="./components/angular/angular.js"></script>
-    </body>
+<script src="./components/angular/angular.js"></script>
+<script src="./components/angular/angular-ui-states.js"></script>
+<script src="./app.js"></script>
+</head>
+<body ng-controller='MainController'>
+<div ui-view></div>
+
+
+
+</body>
+
 
 </html>
